# random-feature-method

./: .gitignore  CMakeLists.txt  README.md  api-reference.md
article/tex/: .gitignore  main.tex  ustcsetup.tex
article/tex/chapters/: abstract.tex  introduction.tex  methodology.tex  numerical.tex
config/: hjb_lq_d100.json
configs/: allencahn_d100.json  bsm_d100.json
src/: CMakeLists.txt  main_bsde.cpp  main_rfm.cpp
src/config/: CMakeLists.txt  config.cpp  config.h
src/equations/: CMakeLists.txt  equation.h  equation_factory.h  register_all_eqn.h  register_equation.h
src/equations/PDEs/: CMakeLists.txt  allencahn.cpp  bsm.cpp  hjblq.cpp
src/mlp/: CMakeLists.txt  mlp.cpp  mlp.h
src/model/: CMakeLists.txt  non_shared_model.cpp  non_shared_model.h
src/rff/: CMakeLists.txt  rff.cpp  rff.h
src/solver/: CMakeLists.txt  bsde_solver.cpp  bsde_solver.h  linear_solve_result.h  lr_scheduler_utils.h  rfm.cpp  rfm_solver.cpp  rfm_solver.h
